# TesterX

./: .gitignore  README.md  config_example.py  pyproject.toml
config/: default.yaml
docs/: README_zh.md
docs/temp/: idea.md  prompt.md
testerx/: __main__.py
testerx/agent/: access.py  embedding.py  logger.py
testerx/data_access/: json_data_access.py
testerx/run/: run.py
testerx/staff/: api_document_engineer.py
testerx/tools/: __init__.py  base.py  curl_tool.py  python_function_tool.py  step_completion_tool.py  store_memory.py  system_command_tool.py  tool_manager.py
testerx/utils/: dataframe_exporter.py  parsing_openapi_json.py  parsing_yaml_config.py
testerx/workflow/: add_openapi_documents_to_memory.py
